# Grainflow_Pd

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pd.cmake
.github/workflows/: cmake-multi-platform.yml
extras/: grainflow.WaveformExample.pd  grainflow_examples.pd  grainflow_overview.pd  mc_osc.pd  mc_rate.pd  pr.slider.pd  pr.wave.pd_lua
grainflow/: grainflow~-help.pd  grainflow~.exp  grainflow~.lib  grainflow~.m_amd64
scripts/: codesign.py
source/projects/common/: PdBufferReader.h  grainflowBase.h  timer.h
source/projects/grainflow_live_tilde/: CMakeLists.txt  CmakeLists.txt  grainflow.live~-help.pd  grainflow_live_tilde.cpp
source/projects/grainflow_multiPan_tilde/: CMakeLists.txt  CmakeLists.txt  grainflow.multiPan~-help.pd  grainflow_multiPan_tilde.cpp
source/projects/grainflow_record_tilde/: CMakeLists.txt  CmakeLists.txt  grainflow.record~-help.pd  grainflow_record_tilde.cpp
source/projects/grainflow_stereoPan_tilde/: CMakeLists.txt  CmakeLists.txt  grainflow.stereoPan~-help.pd  grainflow_stereoPan_tilde.cpp
source/projects/grainflow_tilde/: CMakeLists.txt  CmakeLists.txt  grainflow_tilde.cpp  grainflow~-help.pd  mc_fm.pd
source/projects/grainflow_waveform/: CmakeLists.txt  grainflow.WaveformExample.pd  grainflow.waveform-help.pd  grainflow.waveform.lua  grainflow.waveform.pd_lua  grainflow.waveform2.lua  pr.slider.pd
toolchains/: Linux_Arm.cmake
